// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`web installer (default github) 1`] = `
{
  "win": [
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "TestApp-WebSetup-1.1.0.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "TestApp-WebSetup-1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.nsis.7z",
    },
    {
      "arch": "ia32",
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 1`] = `
{
  "win": [
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.1.0.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.nsis.7z",
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, safe name on github 1`] = `
{
  "win": [
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "WorkFlowy.exe",
          },
        ],
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "WorkFlowy.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    {
      "arch": "x64",
      "file": "WorkFlowy.exe",
      "updateInfo": {
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
  ],
}
`;
